# modelRoutingPoc

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: access.example.yaml  approvals.example.yaml  benchmarks.yaml  champions.yaml  models.yaml
docs/: POC_PLAN.md  PRE_DEPLOY_CHECKLIST.md  TEST_REPORT.md
scripts/: generate_benchmarks.mjs
src/: approvals.rs  auth.rs  champions.rs  config.rs  crypto.rs  domain.rs  grader.rs  main.rs  provider.rs  store.rs
tests/: html_contract.test.js  web_logic.test.js
web/: app.js  demo.html  index.html  logic.js  styles.css
